corpus/c/macro_include/case-12/snapshots/gcc15/dual_sink_structured/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.c:9:12: error: [macro_include] 'Counter' has no member named 'count'
from: invocation of 'OUTER_ACCESS' @ src/main.c:9:12
via : src/config.h:2:29 in expansion of macro 'INNER_ACCESS'
| src/main.c:9:12
|     return OUTER_ACCESS(counter);
|            ^
from include chain:
  - src/wrapper.h:1 included from src/main.c:1

src/config.h:1:37: error: [macro_include] 'Counter' has no member named 'count'
src/main.c: In function 'main':
    1 | #define INNER_ACCESS(value) ((value).count)
      |                                     ^
raw : src/config.h:1:37: error: 'Counter' has no member named 'count'
| src/config.h:1:37
| #define INNER_ACCESS(value) ((value).count)
|                                     ^
through macro expansion: preserved macro/include context